--- a/src/libft/Makefile
+++ b/src/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/15 19:59:42 by mde-sa--          #+#    #+#              #
-#    Updated: 2023/09/07 14:25:25 by mde-sa--         ###   ########.fr        #
+#    Updated: 2023/09/07 14:58:24 by mde-sa--         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,7 +27,8 @@ SRC		=	ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c ft_memchr.c \
 			ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
 			ft_lstmap.c ft_printf.c ft_printf_string.c ft_printf_base.c \
 			ft_printf_char.c ft_printf_int.c ft_printf_ptr.c ft_printf_uns.c \
-			ft_fprintf.c get_next_line.c get_next_line_utils.c ft_strcmp.c
+			ft_fprintf.c get_next_line.c get_next_line_utils.c ft_strcmp.c \
+			ft_strcmp_input.c
 
 OBJ		=	$(SRC:.c=.o)
 
